--- a/03.ipynb
+++ b/03.ipynb
@@ -321,7 +321,7 @@
     "pd.options.display.float_format ='{:,.2f}'.format\n",
     "\n",
     "try:\n",
-    "    data = pd.read_csv('C:\\\\Users\\\\maria\\\\OneDrive\\\\Masha\\\\data_science\\\\projects\\\\datasets\\\\real_estate_data.csv', \n",
+    "    data = pd.read_csv('C:\\\\Users\\\\data_science\\\\projects\\\\datasets\\\\real_estate_data.csv', \n",
     "                       '\\t')\n",
     "except FileNotFoundError:\n",
     "    data = pd.read_csv('/datasets/real_estate_data.csv', '\\t')\n",
