--- a/05.ipynb
+++ b/05.ipynb
@@ -72,7 +72,7 @@
     "# Считываем файл в датафрейм df\n",
     "\n",
     "try:\n",
-    "    df = pd.read_csv('C:\\\\Users\\\\maria\\\\OneDrive\\\\Masha\\\\data_science\\\\projects\\\\datasets\\\\games.csv')\n",
+    "    df = pd.read_csv('C:\\\\Users\\\\data_science\\\\projects\\\\datasets\\\\games.csv')\n",
     "except FileNotFoundError:\n",
     "    df = pd.read_csv('/datasets/games.csv')"
    ]
